# LSPosed_mod

./: .gitignore  .gitmodules  DEVELOPMENT.md  README.md  TROUBLESHOOT.md  build.gradle.kts  settings.gradle.kts
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: core.yml  crowdin.yml
apache/: build.gradle.kts
api-and-service/service-master/: settings.gradle.kts
api-and-service/service-master/interface/: build.gradle.kts
api-and-service/service-master/service/: build.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/res/menu/: menu_app_list.xml
app/src/main/res/values/: strings.xml  (+1 more)
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-in/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-pl/: strings.xml
app/src/main/res/values-pt-rBR/: strings.xml
axml/: build.gradle.kts
core/: build.gradle.kts  proguard-rules.pro
core/src/main/jni/: CMakeLists.txt
core/src/main/jni/include/: config.h  elf_util.h  native_util.h  symbol_cache.h
core/src/main/jni/include/framework/androidfw/: resource_types.h
core/src/main/jni/src/: context.cpp  elf_util.cpp  native_api.cpp  native_api.h  symbol_cache.cpp
core/src/main/jni/src/jni/: hook_bridge.cpp  resources_hook.cpp
daemon/: build.gradle.kts
daemon/src/main/jni/: CMakeLists.txt  dex2oat.cpp  logcat.cpp
dex2oat/: build.gradle.kts
dex2oat/src/main/cpp/: CMakeLists.txt  dex2oat.c  logging.h  oat_hook.cpp
gradle/: libs.versions.toml
magisk-loader/: build.gradle.kts  proguard-rules.pro
magisk-loader/magisk_module/: action.sh  customize.sh  daemon  module.prop  post-fs-data.sh  sepolicy.rule  service.sh  util_functions.sh
magisk-loader/src/main/jni/: CMakeLists.txt
magisk-loader/src/webroot/: index.html  index.js
magisk-loader/update/: changelog.md  riru.json  zygisk.json
(+66 files in other folders)
